--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@
 /* Media query for landscape orientation */
 @media screen and (orientation: landscape) {
     #content {
-        width: 100%;
-        max-width: 1920px;
-        height: 56.25vw; /* 1080p aspect ratio: 1080 / 1920 * 100 = 56.25 */
-        max-height: 1080px;
+        width: 100vw;
+        max-width: 177.77vh;
+        /*max-width: 1920px;*/
+        height: 100%; /* 1080p aspect ratio: 1080 / 1920 * 100 = 56.25 */
+        /*max-height: 1080px;*/
     }
 }
 /* Apply these styles when the screen width is less than the height (portrait mode) */
 @media screen and (orientation: portrait) {
     body {
-        display: none; /* Hide the entire body when in portraxit mode */
+        display: none;
     }
 }
 
@@ -25,10 +26,11 @@
 @media screen and (max-width: 768px) {
 
     #content {
-        height: 75vw; /* Adjust the aspect ratio for smaller screens */
+        height: 100%; /* Adjust the aspect ratio for smaller screens */
         max-height: 720px; /* Adjust the maximum height for smaller screens */
     }
 }
+
 
 
 * {
@@ -36,7 +38,7 @@
   }
   
 
-body {
+body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -44,7 +46,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 
     font-family: 'Klee One', cursive;
 
@@ -62,15 +64,14 @@ body {
     width: 100vw;
     height: 56.25vw; /* 1080p aspect ratio: 1080 / 1920 * 100 = 56.25 */
     max-height: 100vh; /* Set maximum height to avoid overflowing the viewport */
-    max-width: 100vw;
+    max-width: 100%; /* Prevent the container from exceeding the viewport width */
+    padding-bottom: 56.25%; /* 9/16 * 100% = 56.25% for a 16:9 aspect ratio */
+    
+    /*max-width: 100vw;*/
     margin: 0.2vw;
     overflow: hidden;
     
     /* Add your website content styles here */
-    background-image: url('./Web/page01.jpg');
-    background-size: contain; 
-    background-position: right; 
-    background-repeat: no-repeat;
     background-color: #000000;
 
     display: grid;
@@ -108,10 +109,10 @@ body {
         grid-gap: 0vw;
         border: 0vw;
         z-index: 2;
-        background-image: url('./Web/page01.jpg');
+        /*background-image: url('./Web/page01.jpg');
         background-size: contain; 
         background-position: center; 
-        background-repeat: no-repeat;
+        background-repeat: no-repeat;*/
     }
 
 
@@ -196,9 +197,6 @@ small {
     justify-content: center;
 }
 
-
-
-
 .footer {
     background-color: #f1faff;
     background-image: linear-gradient(160deg, #eeedf1 0%, #3c1000 127%);
@@ -218,7 +216,6 @@ small {
     box-shadow: 0 .1vw .2vw rgba(0, 0, 0, 0.836), 0 .06vw .06vw rgba(0, 0, 0, 0.23);
     padding: .1vw;
 }
-
 
 .menu-button {
     height: 6.2vw;
@@ -363,6 +360,7 @@ a.button {
     border: 0vw;
     border-radius: 0vw;
 }
+
 
 .row>.column {
     padding: 0 .8vw;
