--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
         width: 100vw;
         max-width: 177.77vh;
         /*max-width: 1920px;*/
-        height: 100%; /* 1080p aspect ratio: 1080 / 1920 * 100 = 56.25 */
+        height: 56.25vw; /* 1080p aspect ratio: 1080 / 1920 * 100 = 56.25 */
         /*max-height: 1080px;*/
     }
 }
